# AI-Transcriber-Audio-Video-CLI-Tool

./: .gitignore  Dockerfile  README.md  app.py  files.ipynb  pyproject.toml  ruff.toml  utils.py
docs/: SysRS.md  URS.md
utils/: __init__.py  io_tools.py  log_tools.py  terminal_tools.py  transcript_tools.py
