[project]
name = "whisper-transcript-from-thawancomt"
version = "1.6.0"
description = "Um script de linha de comando eficiente para transcrever arquivos de áudio e vídeo em legendas .srt usando a tecnologia Whisper."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "faster-whisper>=1.1.1",
    "nvidia-ml-py3>=7.352.0",
    "pip>=25.2",
    "questionary>=2.1.0",
    "rich>=14.1.0",
    "ruff>=0.12.8",
    "torch>=2.7.1",
]
